--- a/.github/workflows/run-bot.yml
+++ b/.github/workflows/run-bot.yml
@@ -22,14 +22,14 @@ jobs:
           python-version: "3.10" # Specify your preferred Python version
 
       # Install Playwright and dependencies
-      - name: Set up Playwright
-        uses: microsoft/playwright-github-action@v1
+      - name: Install Playwright dependencies
+        run: |
+          npx playwright install --with-deps
 
       # Install Python dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install discord.py playwright requests
           pip install -r requirements.txt
 
       # Run the Discord bot
