--- a/.github/workflows/run-bot.yml
+++ b/.github/workflows/run-bot.yml
@@ -23,6 +23,9 @@ jobs:
       # 安裝 Playwright 和依賴
       - name: Install Playwright dependencies
         run: |
+          sudo apt-get update
+          sudo apt-get install -y wget ca-certificates
+          sudo apt-get install -y fonts-liberation libappindicator3-1 libasound2 libatk-bridge2.0-0 libatk1.0-0 libcups2 libgdk-pixbuf2.0-0 libnspr4 libnss3 libxss1 xdg-utils
           python -m pip install playwright
           playwright install --with-deps
 
