--- a/.github/workflows/run-bot.yml
+++ b/.github/workflows/run-bot.yml
@@ -2,7 +2,8 @@ name: Discord Bot API Tester
 
 on:
   schedule:
-    - cron: "*/2 * * * *" # 每 2 分鐘運行一次
+    # - cron: "0 * * * *" # 每小時運行一次（建議）
+    - cron: "*/2 * * * *" # 每小時運行一次（建議）
   workflow_dispatch: # 允許手動觸發
 
 jobs:
@@ -10,33 +11,52 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout the repository code
-      - name: Checkout code
+      - name: 簽出程式碼
         uses: actions/checkout@v4
 
-      # Set up Python environment
-      - name: Set up Python
+      - name: 設定 Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.10" # 指定你想使用的 Python 版本
+          python-version: "3.10"
 
-      # 安裝 Playwright 和依賴
-      - name: Install Playwright dependencies
+      - name: 安裝系統依賴
         run: |
           sudo apt-get update
-          sudo apt-get install -y wget ca-certificates
-          sudo apt-get install -y fonts-liberation libappindicator3-1 libasound2 libatk-bridge2.0-0 libatk1.0-0 libcups2 libgdk-pixbuf2.0-0 libnspr4 libnss3 libxss1 xdg-utils
-          python -m pip install playwright
-          playwright install --with-deps
+          sudo apt-get install -y \
+            wget \
+            ca-certificates \
+            fonts-liberation \
+            libappindicator3-1 \
+            libasound2t64 \
+            libatk-bridge2.0-0 \
+            libatk1.0-0 \
+            libcups2 \
+            libgdk-pixbuf2.0-0 \
+            libnspr4 \
+            libnss3 \
+            libxss1 \
+            xdg-utils \
+            libcairo2 \
+            libdrm2 \
+            libegl1 \
+            libgbm1 \
+            libglib2.0-0 \
+            libgtk-3-0 \
+            libpango-1.0-0 \
+            libx11-6 \
+            libxcomposite1 \
+            libxdamage1 \
+            libxfixes3 \
+            libxrandr2 \
+            libwayland-client0
 
-      # 安裝 Python 依賴
-      - name: Install dependencies
+      - name: 安裝 Python 依賴
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install discord.py playwright requests
+          python -m playwright install
 
-      # 運行 Discord bot
-      - name: Run bot
+      - name: 執行機器人
         env:
           DISCORD_TOKEN: ${{ secrets.DISCORD_TOKEN }}
           CHANNEL_ID: ${{ secrets.CHANNEL_ID }}
